--- a/index.html
+++ b/index.html
@@ -9,32 +9,29 @@
       rel="stylesheet"
     />
   </head>
-
   <body>
     <div id="overlay">
       <div class="message-container">
         <h2>Welcome to Retro Simon Game</h2>
         <p>Instructions:</p>
         <p>
-          Watch the pattern, remember it, and repeat it clicking the buttons.
+          Watch the pattern, remember it, and repeat it by clicking the buttons.
         </p>
         <p>Press any key to start!</p>
       </div>
     </div>
-
     <h1 id="level-title">Press a Key to Start</h1>
     <div class="container">
       <div class="row">
-        <div type="button" id="green" class="btn green neon"></div>
-        <div type="button" id="red" class="btn red neon"></div>
+        <div id="green" class="btn green neon"></div>
+        <div id="red" class="btn red neon"></div>
       </div>
       <div class="row">
-        <div type="button" id="yellow" class="btn yellow neon"></div>
-        <div type="button" id="blue" class="btn blue neon"></div>
+        <div id="yellow" class="btn yellow neon"></div>
+        <div id="blue" class="btn blue neon"></div>
       </div>
     </div>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="index.js" charset="utf-8"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
