--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
     </div>
 
-    <h1 id="level-title">Press a Key to Start</h1>
+    <h1 id="level-title">Get Ready!</h1>
     <div class="container">
       <div class="row">
         <div type="button" id="green" class="btn green neon"></div>
