--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <h2>Welcome to Retro Simon Game</h2>
         <p>Instructions:</p>
         <p>
-          Watch the pattern, remember it, and repeat by clicking the buttons.
+          Watch the pattern, remember it, and repeat it <br />
+          by clicking the buttons.
         </p>
         <p>Press any key to start!</p>
       </div>
