--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           Watch the pattern, remember it, and repeat it <br />
           by clicking the buttons.
         </p>
-        <p>Press any key to start!</p>
+        <p>Click anywhere to start!</p>
       </div>
     </div>
 
